@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200104"
-#define public MagickPackageReleaseDate "snapshot-20200104"
+#define public MagickPackageVersionAddendum ".020200105"
+#define public MagickPackageReleaseDate "snapshot-20200105"
