@@ -1,3 +1,8 @@
+2020-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/logo.c (ReadLOGOImage): PATTERN error handling was
+	incomplete.  Add appropriate error handling.
+
 2020-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/*.c (ReadFOOImage): Stop image timer just before
